# src/api/courriers/dto/add-cotation-employe.dto.ts
@@ -1,17 +1,16 @@
 /**
  * @Project gestion-courrier-api
- * @File add-cotation.dto.ts
+ * @File add-cotation-employe.dto.ts
  * @Path src/api/courriers/dto
  * @Author BRICE ZELE
- * @Date 22/04/2022
+ * @Date 13/06/2022
  */
-import { IsArray, IsBoolean, IsMongoId, IsNotEmpty, IsOptional } from "class-validator";
+import { IsBoolean, IsMongoId, IsNotEmpty, IsOptional } from "class-validator";
 import { ApiProperty } from "@nestjs/swagger";
 import { Exclude } from "class-transformer";
 import { User } from "../../users/entities/user.entity";
-import { AddCotationEmployeDto } from "./add-cotation-employe.dto";
 
-export class AddCotationDto {
+export class AddCotationEmployeDto {
     @ApiProperty({
         description: 'Statut de la cotation',
         nullable: false,
@@ -28,15 +27,6 @@ export class AddCotationDto {
     @IsMongoId()
     @IsOptional()
     user: User;
-
-    @ApiProperty({
-        description: 'Cotation employe',
-        required: false,
-        default: [],
-    })
-    @IsArray()
-    @IsOptional()
-    cotation_employe?: AddCotationEmployeDto;
 
     @Exclude()
     readonly date: any;
