# src/api/courriers/entities/courrier.entity.ts
@@ -3,7 +3,6 @@ import { Transform, Type } from "class-transformer";
 import { Document, ObjectId, Types } from "mongoose";
 import { CourrierType } from "../../../enum/courriertype.enum";
 import { CourrierCategory } from "../../../enum/courriercategory.enum";
-import { Direction } from "../../../enum/direction.enum";
 import { User } from "../../users/entities/user.entity";
 import { File } from "../../file/entities/file.entity";
 import { CourrierStatus } from "../../../enum/courrierstatus.enum";
@@ -29,27 +28,45 @@ export class HistoryModification {
     })
     status: string;
 
-    @Prop({ type: Types.ObjectId, ref: "User", required: true })
+    @Prop({type: Types.ObjectId, ref: 'User', required: true})
     @Type(() => User)
     user: User | Types.ObjectId;
 
-    @Prop({ type: Date, required: false, default: Date.now })
+    @Prop({type: Date, required: false, default: Date.now})
     date: Date;
 }
 
 const HistoryModificationSchema =
-  SchemaFactory.createForClass(HistoryModification);
+    SchemaFactory.createForClass(HistoryModification);
 
 @Schema()
-export class Cotation {
-    @Prop({ type: Boolean, required: true })
+export class CotationEmploye {
+    @Prop({type: Boolean, required: true})
     validated: boolean;
 
-    @Prop({ type: Types.ObjectId, ref: "User", required: true })
+    @Prop({type: Types.ObjectId, ref: 'User', required: true})
     @Type(() => User)
     user: User | Types.ObjectId;
 
-    @Prop({ type: Date, required: false, default: Date.now })
+    @Prop({type: Date, required: false, default: Date.now})
+    date: Date;
+}
+
+const CotationEmployeSchema = SchemaFactory.createForClass(CotationEmploye);
+
+@Schema()
+export class Cotation {
+    @Prop({type: Boolean, required: true})
+    validated: boolean;
+
+    @Prop({type: Types.ObjectId, ref: 'User', required: true})
+    @Type(() => User)
+    user: User | Types.ObjectId;
+
+    @Prop({type: [CotationEmployeSchema], default: []})
+    cotation_employe: CotationEmploye[];
+
+    @Prop({type: Date, required: false, default: Date.now})
     date: Date;
 }
 
@@ -58,44 +75,40 @@ const CotationSchema = SchemaFactory.createForClass(Cotation);
 @Schema({
     toJSON: {
         getters: true,
-        virtuals: true
-    }
+        virtuals: true,
+    },
 })
 export class Courrier {
-    @Transform(({ value }) => value.toString())
+    @Transform(({value}) => value.toString())
     _id: ObjectId;
 
     @Prop({
         type: String,
         required: false,
-        default: null
+        default: null,
     })
     objet: string;
 
-    @Prop({ type: String, default: null, required: false, maxlength: 255 })
+    @Prop({type: String, default: null, required: false, maxlength: 255})
     picture: string;
 
-    @Prop({ type: String, default: null, required: true, maxlength: 255 })
+    @Prop({type: String, default: null, required: true, maxlength: 255})
     code: string;
 
-    @Prop({ type: String, default: null, required: true, maxlength: 255 })
+    @Prop({type: String, default: null, required: true, maxlength: 255})
     emetteur: string;
 
-    @Prop({ type: String, default: null, required: false, maxlength: 255 })
+    @Prop({type: String, default: null, required: false, maxlength: 255})
     recepteur: string;
 
     @Prop({
         type: String,
         enum: [CourrierType.SORTANT, CourrierType.ENTRANT],
-        default: CourrierType.ENTRANT
+        default: CourrierType.ENTRANT,
     })
     type: string;
 
-    @Prop({
-        type: String,
-        enum: [Direction.FGT, Direction.DF, Direction.NMR, Direction.LG],
-        default: Direction.FGT
-    })
+    @Prop({type: String, default: null, required: false, maxlength: 255})
     direction: string;
 
     @Prop({
@@ -105,9 +118,9 @@ export class Courrier {
             CourrierStatus.EN_ATTENTE_VALIDATION_1,
             CourrierStatus.EN_ATTENTE_VALIDATION_2,
             CourrierStatus.EN_ATTENTE_COTATION_APPROBATION_DGA,
-            CourrierStatus.VALIDE_APPROUVE
+            CourrierStatus.VALIDE_APPROUVE,
         ],
-        default: CourrierStatus.PENDING
+        default: CourrierStatus.PENDING,
     })
     status: string;
 
@@ -134,26 +147,26 @@ export class Courrier {
             CourrierCategory.DEMANDE_CONGE,
             CourrierCategory.DEMANDE_EXPLICATION,
             CourrierCategory.DEMANDE_PERMISSION,
-            CourrierCategory.DEMANDE_LOCATION_MATERIEL
+            CourrierCategory.DEMANDE_LOCATION_MATERIEL,
         ],
-        default: CourrierCategory.COURRIER
+        default: CourrierCategory.COURRIER,
     })
     category: string;
 
-    @Prop({ type: [CotationSchema], default: [] })
+    @Prop({type: [CotationSchema], default: []})
     cotation: Cotation[];
 
-    @Prop({ type: [{ type: Types.ObjectId, ref: "File" }], default: null })
+    @Prop({type: [{type: Types.ObjectId, ref: 'File'}], default: null})
     @Type(() => File)
     documents_annexe: File[];
 
-    @Prop({ type: [HistoryModificationSchema], default: [] })
+    @Prop({type: [HistoryModificationSchema], default: []})
     modifications_history: HistoryModification[];
 
-    @Prop({ required: true, type: Date, default: Date.now })
+    @Prop({required: true, type: Date, default: Date.now})
     createdAt: Date;
 
-    @Prop({ required: true, type: Date, default: Date.now })
+    @Prop({required: true, type: Date, default: Date.now})
     updatedAt: Date;
 
     @Prop()
