# swagger.json
@@ -796,6 +796,157 @@
           }
         ]
       }
+    },
+    "/society": {
+      "post": {
+        "operationId": "createSociety",
+        "summary": "Creation d'un société",
+        "description": "Création d'un nouveau société",
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateSocietyDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Succes création société",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CreateUserDto"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        },
+        "tags": [
+          "Society Endpoint"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
+      },
+      "get": {
+        "operationId": "SocietyController_findAll",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Society Endpoint"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
+      }
+    },
+    "/society/{id}": {
+      "get": {
+        "operationId": "SocietyController_findOne",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Society Endpoint"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
+      },
+      "put": {
+        "operationId": "SocietyController_update",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateSocietyDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Society Endpoint"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
+      },
+      "delete": {
+        "operationId": "SocietyController_remove",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Society Endpoint"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
+      }
     }
   },
   "info": {
@@ -860,18 +1011,18 @@
             "type": "string",
             "description": "Nom de l'utilisateur",
             "nullable": false,
-            "default": "Alcine"
+            "default": "Eudoxie"
           },
           "lastname": {
             "type": "string",
             "description": "Prénom de l'utilisateur",
-            "default": "Mercier"
+            "default": "Carre"
           },
           "email": {
             "type": "string",
             "description": "Email de l'utilisateur",
             "nullable": false,
-            "default": "Arsnie_Vincent@yahoo.fr"
+            "default": "Clien18@hotmail.fr"
           },
           "picture": {
             "type": "number",
@@ -881,7 +1032,7 @@
             "type": "string",
             "description": "Numéro de téléphone",
             "nullable": false,
-            "default": "0414396412"
+            "default": "0669126639"
           },
           "department": {
             "type": "object",
@@ -892,7 +1043,7 @@
             "type": "string",
             "description": "Mot de passe de connexion",
             "nullable": false,
-            "default": "NbFOEvTaJ9uS_9J"
+            "default": "FmBROE2NypD3Gcj"
           },
           "roles": {
             "type": "string",
@@ -918,18 +1069,18 @@
             "type": "string",
             "description": "Nom de l'utilisateur",
             "nullable": false,
-            "default": "Alcine"
+            "default": "Eudoxie"
           },
           "lastname": {
             "type": "string",
             "description": "Prénom de l'utilisateur",
-            "default": "Mercier"
+            "default": "Carre"
           },
           "email": {
             "type": "string",
             "description": "Email de l'utilisateur",
             "nullable": false,
-            "default": "Arsnie_Vincent@yahoo.fr"
+            "default": "Clien18@hotmail.fr"
           },
           "picture": {
             "type": "number",
@@ -939,7 +1090,7 @@
             "type": "string",
             "description": "Numéro de téléphone",
             "nullable": false,
-            "default": "0414396412"
+            "default": "0669126639"
           },
           "department": {
             "type": "object",
@@ -950,7 +1101,7 @@
             "type": "string",
             "description": "Mot de passe de connexion",
             "nullable": false,
-            "default": "NbFOEvTaJ9uS_9J"
+            "default": "FmBROE2NypD3Gcj"
           },
           "roles": {
             "type": "string",
@@ -963,6 +1114,29 @@
       "User": {
         "type": "object",
         "properties": {}
+      },
+      "AddCotationEmployeDto": {
+        "type": "object",
+        "properties": {
+          "validate": {
+            "type": "boolean",
+            "description": "Statut de la cotation",
+            "nullable": false,
+            "default": false
+          },
+          "user": {
+            "description": "Utilisateur",
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/User"
+              }
+            ]
+          }
+        },
+        "required": [
+          "validate",
+          "user"
+        ]
       },
       "AddCotationDto": {
         "type": "object",
@@ -978,6 +1152,15 @@
             "allOf": [
               {
                 "$ref": "#/components/schemas/User"
+              }
+            ]
+          },
+          "cotation_employe": {
+            "description": "Cotation employe",
+            "default": [],
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/AddCotationEmployeDto"
               }
             ]
           }
@@ -1043,7 +1226,7 @@
             "type": "string",
             "description": "Département récepteur du courrier",
             "nullable": false,
-            "default": "fgt"
+            "default": null
           },
           "status": {
             "type": "string",
@@ -1134,7 +1317,7 @@
             "type": "string",
             "description": "Département récepteur du courrier",
             "nullable": false,
-            "default": "fgt"
+            "default": null
           },
           "status": {
             "type": "string",
@@ -1241,6 +1424,29 @@
           "dimunitif": {
             "type": "string",
             "description": "dimunitif du département",
+            "nullable": false
+          }
+        }
+      },
+      "CreateSocietyDto": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string",
+            "description": "Nom du département",
+            "nullable": false
+          }
+        },
+        "required": [
+          "name"
+        ]
+      },
+      "UpdateSocietyDto": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string",
+            "description": "Nom du département",
             "nullable": false
           }
         }
